--- a/src/App.css
+++ b/src/App.css
@@ -4,21 +4,56 @@
   height: 100vh;
 }
 
+.header {
+  font-family: 'Courier New', Courier, monospace;
+  font-size: xx-large;
+}
+
 .todo-list {
   background: #e8e8e8;
   border-radius: 4px;
   max-width: 600px;
-  padding: 6px;
+  padding: 20px;
+  
 }
 
 .todo {
   background: #fff;
-  padding: 6px 12px;
+  padding: 10px 18px;
   border-radius: 5px;
   font-size: 20px;
+  font-weight: bold;
   margin-bottom: 6px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15);
+  font-family: 'Courier New', Courier, monospace;
 }
+
+.input {
+  border-radius: 5px;
+  max-width: 450px;
+  padding: 8px;
+  font-size: large;
+  font-family: 'Courier New', Courier, monospace;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15);
+
+
+}
+
+button {
+color: #fff !important;
+text-transform: uppercase;
+text-decoration: none;
+background: #60a3bc;
+padding: 12px;
+margin: 3px;
+font-weight: bold;
+border-radius: 40px;
+display: inline-block;
+border: none;
+transition: all 0.4s ease 0s;
+box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15);
+}
+
